# game24-verl

./: .gitignore  README.md  pyproject.toml  requirements-server.txt
configs/: default.env.example
configs/evaluation/single_model/: default.yaml
game24/: __init__.py  metrics.py  prompt.py  reward.py  reward_strict.py  solver.py  strict_dapo_reward_manager.py  trajectory.py  verifier.py
scripts/: audit_game24_boundaries.py  build_sft_data.py  evaluate.py  evaluate_single_model.py  final_evaluation.py  prepare_data.py  run_final_evaluation.sh  run_grpo_full.sh  run_grpo_full_param.sh  run_grpo_lora.sh  run_grpo_lora_improved.sh  run_sft.sh  run_single_model_evaluation.sh
