[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "game24-verl"
version = "0.1.0"
description = "Game of 24 task layer for verl v0.7.1 GRPO LoRA training."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["game24*"]
